--- a/Language/packs.json
+++ b/Language/packs.json
@@ -1,1 +1,1 @@
-{"packs":{"general":"https://raw.githubusercontent.com/Abwasserrohr/LanguageLoader/main/Language/packs/general.yml"},{"bauevent":"https://raw.githubusercontent.com/Abwasserrohr/LanguageLoader/main/Language/packs/bauevent.yml"}}
+{"packs":{"general":"https://raw.githubusercontent.com/Abwasserrohr/LanguageLoader/main/Language/packs/general.yml","bauevent":"https://raw.githubusercontent.com/Abwasserrohr/LanguageLoader/main/Language/packs/bauevent.yml"}}
