Added missing character

--- a/Language/packs/armorstands_en.yml
+++ b/Language/packs/armorstands_en.yml
@@ -1,6 +1,6 @@
 "guiheader": "&lAdjust armor stand"
 "head": "&rHead"
-"body": "&Upper Body"
+"body": "&rUpper Body"
 "legs": "&rLegs"
 "feet": "&rFeet"
 "rightleg": "&rRight leg"
