Chat Prefix Hover Text hinzugefügt

--- a/Language/packs/chat_de.yml
+++ b/Language/packs/chat_de.yml
@@ -1,16 +1,18 @@
-"prefixHover&b[BL]": ""
-"prefixHover&6[FB-A]&r": ""
-"prefixHover&2[EM]": ""
-"prefixHover&3[E]&r": ""
-"prefixHover&6[SB-A]": ""
-"prefixHover&b[B]": ""
-"prefixHover&b[B]&r": ""
-"prefixHover&c[YT+]": ""
-"prefixHover&c[YT]": ""
-"prefixHover&5[LIVE]": ""
-"prefixHover&b[D]": ""
-"prefixHover&e[V]": ""
-"prefixHover&2[S]&r": ""
-"prefixHover&4[M]": ""
-"prefixHover&6[SV-A]&r": ""
-"prefixHover&b[SK]": ""
+"prefixHover&b[BL]": "&b&lBauleitung\n&7Verteilt die Aufgaben\n&7der Builder weiter."
+"prefixHover&2[EM]": "&2&lEventmoderator\n&7Leitet Events auf dem Server"
+"prefixHover&3[E]&r": "&3&lEhrenmitglied\n&7Ein ehemaliges Teammitglied"
+"prefixHover&6[SB-A]": "&6&lSkyBlock Admin\n&7Leitet den SkyBlock Spielmodus"
+"prefixHover&6[SV-A]&r": "&6&lSurvival Admin\n&7Leitet den Survival Spielmodus"
+"prefixHover&6[FB-A]&r": "&6&lFreebuild Admin\n&7Leitet den Freebuild Spielmodus"
+"prefixHover&b[B]": "&b&lBuilder\n&7Erbaut Gebäude für den Server"
+"prefixHover&c[YT+]": "&c&lProduzentIn von Inhalten\n&7Erstellt Inhalte auf mindestens\n&7einer sozialen Plattform über\n&7den Server."
+"prefixHover&c[YT]": "&c&lProduzentIn von Inhalten\n&7Erstellt Inhalte auf mindestens\n&7einer sozialen Plattform über\n&7den Server."
+"prefixHover&5[LIVE]": "&5&lStreamt gerade\n&7Schau diesem Spieler\n&7auf einer Streamingplattform zu."
+"prefixHover&b[D]": "&d&lSpender\n&7Hat für den Server gespendet"
+"prefixHover&e[V]": "&e&lVideoersteller\n&7Erstellt Videos für den Server"
+"prefixHover&2[S]&r": "&2&lSupporter\n&7Hilft den Spielern"
+"prefixHover&4[M]": "&4&lModerator\n&7Hilft den Spielern"
+"prefixHover&b[SK]": "&b&lSkripter\n&7Erstellt Scripte für den Server"
+"prefixHover&b[Dev]": "&b&lEntwickler\n&7Erstellt Plugins für den Server"
+"prefixHover&6[O]&r": "&6&lOwner\n&7Betreiber des Servers"
+"prefixHoverCustom": "<customPrefix>\n&7Gekaufter Spielerrang für 200 EP"
