--- a/Language/packs/chat_de.yml
+++ b/Language/packs/chat_de.yml
@@ -16,3 +16,13 @@
 "prefixHover&b[Dev]": "&b&lEntwickler\n&7Erstellt Plugins für den Server"
 "prefixHover&6[O]&r": "&6&lOwner\n&7Betreiber des Servers"
 "prefixHoverCustom": "<customPrefix>\n&7Gekaufter Spielerrang für 200 EP"
+"reportHover": "&c&lNachricht melden\n&7Klicke Hier, um die Nachricht\n&7von &f<player>&7 zu melden."
+"usernameHover": "&7Private Nachricht an &f<player>&7 schreiben"
+"reportMessage1": "&7Nachricht von &f<player>&7 melden:"
+"reportMessage2": "&c&l[Jetzt Melden]"
+"reportMessage2Hover": "&7Hier klicken, um &f<player>&7 zu melden."
+"messageIsAlreadyReported": "&7Diese Nachricht wurde bereits gemeldet."
+"userHasBeenReported": "<player> wurde gemeldet."
+"linksCommand1": "Verfügbare Links (anklickbar):"
+"playerIsNotOnline": "&6<player>&7 ist gerade nicht online."
+"useWFirst": "&7Schreibe zuerst jemanden mit /w name text an."
