Added chat translation for English

--- a/Language/packs/chat_en.yml
+++ b/Language/packs/chat_en.yml
@@ -1,16 +1,28 @@
-"prefixHover&b[BL]": ""
-"prefixHover&6[FB-A]&r": ""
-"prefixHover&2[EM]": ""
-"prefixHover&3[E]&r": ""
-"prefixHover&6[SB-A]": ""
-"prefixHover&b[B]": ""
-"prefixHover&b[B]&r": ""
-"prefixHover&c[YT+]": ""
-"prefixHover&c[YT]": ""
-"prefixHover&5[LIVE]": ""
-"prefixHover&b[D]": ""
-"prefixHover&e[V]": ""
-"prefixHover&2[S]&r": ""
-"prefixHover&4[M]": ""
-"prefixHover&6[SV-A]&r": ""
-"prefixHover&b[SK]": ""
+"prefixHover&b[BL]": "&b&lConstruction management\n&7Distributes the tasks\n&7for the builders."
+"prefixHover&2[EM]": "&2&lEvent Moderator\n&7Manages events on the server"
+"prefixHover&3[E]&r": "&3&lHonorary member\n&7A former team member"
+"prefixHover&6[SB-A]": "&6&lSkyBlock Admin\n&7Directs the SkyBlock game mode"
+"prefixHover&6[SV-A]&r": "&6&lSurvival Admin\n&7Directs the Survival game mode"
+"prefixHover&6[FB-A]&r": "&6&lFreebuild Admin\n&7Directs the Freebuild game mode"
+"prefixHover&b[B]": "&b&lBuilder\n&7Building buildings for the server"
+"prefixHover&c[YT+]": "&c&lContent producer\n&7Creates content on at least\n&7one social platform on \n&7 the server."
+"prefixHover&c[YT]": "&c&lContent producer\n&7Creates content on at least\n&7one social platform on \n&7 the server."
+"prefixHover&5[LIVE]": "&5&lIs streaming now\n&7Watch this player\n&7on a streaming platform."
+"prefixHover&b[D]": "&d&lDonator\n&7Donated for the server"
+"prefixHover&e[V]": "&e&lVideo Creator\n&7Creates videos of the server"
+"prefixHover&2[S]&r": "&2&lSupporter\n&7Helps the players"
+"prefixHover&4[M]": "&4&lModerator\n&7Helps the players"
+"prefixHover&b[SK]": "&b&lSkripter\n&7Creates scripts for the server"
+"prefixHover&b[Dev]": "&b&lDeveloper\n&7Creates plugins for the server"
+"prefixHover&6[O]&r": "&6&lOwner\n&7Operator of the server"
+"prefixHoverCustom": "<customPrefix>\n&7Purchased player rank for 200 EP"
+"reportHover": "&c&lReport Message\n&7Click here to report\n&7 the message by &f<player>&7."
+"usernameHover": "&7Send private message to &f<player>&7"
+"reportMessage1": "&7Report messagee by &f<player>&7:"
+"reportMessage2": "&c&l[Report Now]"
+"reportMessage2Hover": "&7Click here to report &f<player>&7."
+"messageIsAlreadyReported": "&7This message has already been reported."
+"userHasBeenReported": "<player> has been reported."
+"linksCommand1": "Available links (clickable):"
+"playerIsNotOnline": "&6<player>&7 iss currencly not online."
+"useWFirst": "&7First write someone with /w name text."
