Fixed grammar issue

--- a/Language/packs/chat_en.yml
+++ b/Language/packs/chat_en.yml
@@ -24,5 +24,5 @@
 "messageIsAlreadyReported": "&7This message has already been reported."
 "userHasBeenReported": "<player> has been reported."
 "linksCommand1": "Available links (clickable):"
-"playerIsNotOnline": "&6<player>&7 iss currencly not online."
+"playerIsNotOnline": "&6<player>&7 is currently not online."
 "useWFirst": "&7First write someone with /w name text."
