--- a/Language/packs/chat_en.yml
+++ b/Language/packs/chat_en.yml
@@ -5,7 +5,7 @@
 "prefixHover&6[SV-A]&r": "&6&lSurvival Admin\n&7Directs the Survival game mode"
 "prefixHover&6[FB-A]&r": "&6&lFreebuild Admin\n&7Directs the Freebuild game mode"
 "prefixHover&b[B]": "&b&lBuilder\n&7Building buildings for the server"
-"prefixHover&c[YT+]": "&c&lContent producer\n&7Creates content on at least\n&7one social platform on \n&7 the server."
+"prefixHover&c[YT+]": "&c&lApproved content producer\n&7Creates content on at least\n&7one social platform on \n&7 the server."
 "prefixHover&c[YT]": "&c&lContent producer\n&7Creates content on at least\n&7one social platform on \n&7 the server."
 "prefixHover&5[LIVE]": "&5&lIs streaming now\n&7Watch this player\n&7on a streaming platform."
 "prefixHover&b[D]": "&d&lDonator\n&7Donated for the server"
