--- a/Language/packs/chat_de.yml
+++ b/Language/packs/chat_de.yml
@@ -11,7 +11,7 @@
 "prefixHover&b[D]": "&d&lSpender\n&7Hat für den Server gespendet"
 "prefixHover&e[V]": "&e&lVideoersteller\n&7Erstellt Videos für den Server"
 "prefixHover&2[S]&r": "&2&lSupporter\n&7Hilft den Spielern"
-"prefixHover&4[M]": "&4&lModerator\n&7Hilft den Spielern"
+"prefixHover&4[M]": "&4&lModerator\n&7Löst größere Konflikte und Probleme"
 "prefixHover&b[SK]": "&b&lSkripter\n&7Erstellt Scripte für den Server"
 "prefixHover&b[Dev]": "&b&lEntwickler\n&7Erstellt Plugins für den Server"
 "prefixHover&6[O]&r": "&6&lOwner\n&7Betreiber des Servers"
