--- a/Language/packs/chat_en.yml
+++ b/Language/packs/chat_en.yml
@@ -11,7 +11,7 @@
 "prefixHover&b[D]": "&d&lDonator\n&7Donated for the server"
 "prefixHover&e[V]": "&e&lVideo Creator\n&7Creates videos of the server"
 "prefixHover&2[S]&r": "&2&lSupporter\n&7Helps the players"
-"prefixHover&4[M]": "&4&lModerator\n&7Helps the players"
+"prefixHover&4[M]": "&4&lModerator\n&7Resolves major conflicts and problems"
 "prefixHover&b[SK]": "&b&lSkripter\n&7Creates scripts for the server"
 "prefixHover&b[Dev]": "&b&lDeveloper\n&7Creates plugins for the server"
 "prefixHover&6[O]&r": "&6&lOwner\n&7Operator of the server"
