--- a/Language/packs/chat_de.yml
+++ b/Language/packs/chat_de.yml
@@ -7,10 +7,10 @@
 "prefixHover&b[B]": "&b&lBuilder\n&7Erbaut Gebäude für den Server"
 "prefixHover&c[YT+]": "&c&lGeprüfte/r ProduzentIn von Inhalten\n&7Erstellt Inhalte auf mindestens\n&7einer sozialen Plattform über\n&7den Server."
 "prefixHover&c[YT]": "&c&lProduzentIn von Inhalten\n&7Erstellt Inhalte auf mindestens\n&7einer sozialen Plattform über\n&7den Server."
-"prefixHover&5[LIVE]": "&5&lStreamt gerade\n&7Schau diesem Spieler\n&7auf einer Streamingplattform zu."
+"prefixHover&5[LIVE]": "&5&lStreamt gerade\n&7Schau dem Stream\n&7auf einer Streamingplattform zu."
 "prefixHover&b[D]": "&d&lSpender\n&7Hat für den Server gespendet"
 "prefixHover&e[V]": "&e&lVideoersteller\n&7Erstellt Videos für den Server"
-"prefixHover&2[S]&r": "&2&lSupporter\n&7Hilft den Spielern"
+"prefixHover&2[S]&r": "&2&lSupporter\n&7Hilft den Spielerinnen und Spielern"
 "prefixHover&4[M]": "&4&lModerator\n&7Löst größere Konflikte und Probleme"
 "prefixHover&b[SK]": "&b&lSkripter\n&7Erstellt Scripte für den Server"
 "prefixHover&b[Dev]": "&b&lEntwickler\n&7Erstellt Plugins für den Server"
