--- a/Language/packs/chat_en.yml
+++ b/Language/packs/chat_en.yml
@@ -8,7 +8,7 @@
 "prefixHover&c[YT+]": "&c&lApproved content producer\n&7Creates content on at least\n&7one social platform on \n&7 the server."
 "prefixHover&c[YT]": "&c&lContent producer\n&7Creates content on at least\n&7one social platform on \n&7 the server."
 "prefixHover&5[LIVE]": "&5&lIs streaming now\n&7Watch this player\n&7on a streaming platform."
-"prefixHover&b[D]": "&d&lDonator\n&7Donated for the server"
+"prefixHover&b[D]": "&b&lDonator\n&7Donated for the server"
 "prefixHover&e[V]": "&e&lVideo Creator\n&7Creates videos of the server"
 "prefixHover&2[S]&r": "&2&lSupporter\n&7Helps the players"
 "prefixHover&4[M]": "&4&lModerator\n&7Resolves major conflicts and problems"
