--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -1,3 +1,5 @@
 "startblock": "Start Block"
 "endblock": "Ende Block"
 "checkpointblock": "Checkpoint Block"
+"checkpointblocks": "Checkpoint Blöcke"
+"clicktogetblock": "Klicke hier, um einen\n<block> zu erhalten."
