--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -3,3 +3,18 @@
 "checkpointblock": "Checkpoint Block"
 "checkpointblocks": "Checkpoint Blöcke"
 "clicktogetblock": "Klicke hier, um einen\n<block> zu erhalten."
+"optional": "Optional:"
+"checked": "[✓]"
+"unchecked": "[ ]"
+"parkourname": "Parkourname"
+"clicktosetname": "Klicke hier, um einen\nParkournamen zu setzen."
+"toplisthologramlocation": "Ort für Toplist Hologram"
+"settoplistlocation": "Klicke hier, um deinen\nStandort für das Toplist\nHologramm zu setzen."
+"parkourinplaymode": "Parkour im Spielmodus"
+"playmode": "Spielmodus"
+"clicktotoggleplaymode": "Klicke hier, um den Spielmodus\nan- oder auszuschalten."
+"testrunpassed": "Testlauf bestanden"
+"testrun": "Testlauf"
+"howtostartestrun": "Laufe im Spielmodus über\nden Startblock, um einen\nTestlauf zu starten."
+"parkourpublished": "Parkour veröffentlicht"
+"clicktopublishparkour": "Klicke hier, um den Parkour\nzu veröffentlichen."
