--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -1,6 +1,9 @@
 "startblock": "Start Block"
 "endblock": "Ende Block"
 "checkpointblock": "Checkpoint Block"
+"startblockdesc": "Markiert den Anfang eines\nParkours, laufe über\ndiesen Block, um einen\nParkour zu beginnen."
+"checkpointblockdesc": "Platziere Checkpoints um\nes den Spielern einfacher zu machen."
+"endblockdesc": "Markiert das Ende eines\nParkours, laufe über\ndiesen Block, um einen\nParkour abzuschließen."
 "checkpointblocks": "Checkpoint Blöcke"
 "clicktogetblock": "Klicke hier, um einen\n<block> zu erhalten."
 "optional": "Optional:"
@@ -18,3 +21,9 @@
 "howtostartestrun": "Laufe im Spielmodus über\nden Startblock, um einen\nTestlauf zu starten."
 "parkourpublished": "Parkour veröffentlicht"
 "clicktopublishparkour": "Klicke hier, um den Parkour\nzu veröffentlichen."
+"parkourAlreadyPublished": "Dieser Parkour wurde bereits veröffentlicht."
+"onlyParkourOwnerCanDoThis": "Nur der Parkour Besitzer kann das."
+"addingPlayersOnlyInBuildMode": "Spieler können nur im Baumodus hinzugefügt werden."
+"playerHasBeenAdded": "<player> wurde hinzugefügt."
+"couldntFindPlayer": "<player> konnte nicht gefunden werden."
+"onlyNotPublishedParkoursCanGoBack": "Nur nicht veröffentlichte Parkours können zurück in den Baumodus geändert werden."
