Added parkour translations for /parkour info

--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -27,3 +27,9 @@
 "playerHasBeenAdded": "<player> wurde hinzugefügt."
 "couldntFindPlayer": "<player> konnte nicht gefunden werden."
 "onlyNotPublishedParkoursCanGoBack": "Nur nicht veröffentlichte Parkours können zurück in den Baumodus geändert werden."
+"couldntFindThisParkour": "Konnte diesen Parkour nicht finden."
+"parkourInfoHeader": "----- Parkour Info -----"
+"parkourname": "Parkourname: <name>"
+"parkourid": "Parkour ID: <id>"
+"parkourcreator": "Ersteller: <name>"
+"parkourrating": "Rating: <rating>"
