Added Parkour publish translations

--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -33,3 +33,13 @@
 "parkourid": "Parkour ID: <id>"
 "parkourcreator": "Ersteller: <name>"
 "parkourrating": "Rating: <rating>"
+"searchsign1": "Nach Parkour"
+"searchsign2": "suchen..."
+"missingBlocksForPlayMode": "Es fehlen noch Parkourblöcke zum starten oder beenden des Parkours."
+"parkourIsNowInPlayMode": "Der Parkour ist jetzt im Spielmodus."
+"parkourIsAlreadyInPlayMode": "Der Parkour ist schon im Spielmodus."
+"setParkourIntoPlayModeFirst": "Stelle den Parkour zuerst in den Spielmodus: /parkour playmode"
+"setParkourNameFirst": "Benenne den Parkour zuerst: /parkour setname Name"
+"solveTestRunFirst": "Spiele den Parkour zuerst selbst durch."
+"parkourAlreadyPublished": "Der Parkour ist bereits veröffentlicht."
+"parkourPublished": "Der Parkour wurde veröffentlicht."
