Added more translations for Parkour

--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -12,6 +12,7 @@
 "parkourname": "Parkourname"
 "clicktosetname": "Klicke hier, um einen\nParkournamen zu setzen."
 "toplisthologramlocation": "Ort für Toplist Hologram"
+"toplistLocationHasBeenSet": "Der Ort für die Hologram Topliste wurde gesetzt."
 "settoplistlocation": "Klicke hier, um deinen\nStandort für das Toplist\nHologramm zu setzen."
 "parkourinplaymode": "Parkour im Spielmodus"
 "playmode": "Spielmodus"
@@ -25,6 +26,7 @@
 "onlyParkourOwnerCanDoThis": "Nur der Parkour Besitzer kann das."
 "addingPlayersOnlyInBuildMode": "Spieler können nur im Baumodus hinzugefügt werden."
 "playerHasBeenAdded": "<player> wurde hinzugefügt."
+"playerHasBeenRemoved": "<player> wurde entfernt."
 "couldntFindPlayer": "<player> konnte nicht gefunden werden."
 "onlyNotPublishedParkoursCanGoBack": "Nur nicht veröffentlichte Parkours können zurück in den Baumodus geändert werden."
 "couldntFindThisParkour": "Konnte diesen Parkour nicht finden."
@@ -43,3 +45,19 @@
 "solveTestRunFirst": "Spiele den Parkour zuerst selbst durch."
 "parkourAlreadyPublished": "Der Parkour ist bereits veröffentlicht."
 "parkourPublished": "Der Parkour wurde veröffentlicht."
+"cantRateYourOwnParkour": "Du kannst deinen eigenen Parkour nicht bewerten."
+"canOnlyRateInPlayMode": "Der Parkour kann erst im Spielmodus bewertet werden."
+"canOnlyRemoveInBuildMode": "Spieler können nur im Baumodus entfernt werden."
+"parkourSpawnHasBeenSet": "Der Parkour Spawn wurde gesetzt."
+"thisFunctionOnlyInBuildMode": "Diese Funktion ist nur im Baumodus verfügbar."
+"settingsHeader": "----- Einstellungen -----"
+"sideBar": "Seitenleiste"
+"bossBar": "Bossleiste"
+"actionBar": "Aktionsleiste"
+"clickToToggleBar": "Klicke hier, um die <bar>\nzu aktivieren oder deaktivieren."
+"abortedRunParkourIsInBuildMode": "Testlauf abgebrochen, der Parkour ist im Baumodus."
+"somethingWentHorriblyWrongError": "Es gab einen schwerwiegenden Fehler."
+"toCheckpointItem": "Zum Checkpoint"
+"toplistHeader": "■ Topliste\n"
+"clickToCompeteGhost": "&6Gegen Geist antreten&r\n&rKlicke hier, um gegen den\nGeist dieser Zeit anzutreten."
+"noEntriesYet": "Noch keine Einträge."
