--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -61,3 +61,19 @@
 "toplistHeader": "■ Topliste\n"
 "clickToCompeteGhost": "&6Gegen Geist antreten&r\n&rKlicke hier, um gegen den\nGeist dieser Zeit anzutreten."
 "noEntriesYet": "Noch keine Einträge."
+"startblockremoved": "Start Block abgebaut."
+"checkpointblockremoved": "Checkpoint Block abgebaut."
+"endblockremoved": "Ende Block abgebaut."
+"startblockplaced": "Start Block platziert."
+"checkpointblockplaced": "Checkpoint Block platziert."
+"endblockplaced": "Ende Block platziert."
+"youSolvedParkourIn": "Du hast den Parkour in <time> geschafft!"
+"onlyParkourOwnerCanStartTestRun": "Nur der Parkour Besitzer kann einen Testlauf starten."
+"noWorldEditForParkourBlocks": "Du kannst Parkour Blöcke nicht mit WorldEdit bearbeiten."
+"restartParkourItem": "Parkour neustarten"
+"myMapsItem": "Meine Karten"
+"parkourSelectionItem": "Parkour Auswahl"
+"toplistItem": "Topliste"
+"buildMode": "Baumodus"
+"testMode": "Testmodus"
+"public": "Öffentlich"
