--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -77,3 +77,39 @@
 "buildMode": "Baumodus"
 "testMode": "Testmodus"
 "public": "Öffentlich"
+"startParkourToCompeteGhost": "Starte den Parkour, um gegen den Geist zu laufen."
+"testRunSolved": "Testlauf abgeschlossen."
+"publishParkourCmd": "Parkour veröffentlichen: /parkour publish"
+"parkourRenamedTo": "Der Parkour wurde in <name> benannt."
+"cannotRenameParkourThatIsDone": "Fertige Parkours können nicht umbenannt werden."
+"selectADifficulty": "Wähle einen Schwierigkeitsgrad"
+"clickToSelectThisDifficulty": "&7Click here to\n&7select this difficulty."
+"clickToSelectAllDifficulties": "&7Click here to\n&7select all difficulties."
+"BEGINNERMaps": "Beginner Karten"
+"EASYMaps": "Einfache Karten"
+"MEDIUMMaps": "Mittlere Karteen"
+"HARDMaps": "Schwere Karten"
+"EXPERTMaps": "Experten Karten"
+"BEGINNERName": "Beginner"
+"EASYName": "Einfach"
+"MEDIUMName": "Mittel"
+"HARDName": "Schwer"
+"EXPERTName": "Experte"
+"backToDiffSelection": "&r&7Zurück zur Auswahl\n&r&7des Schwierigkeitsgrades."
+"mapItemLore": "&7Visits: &6<visits>\n&7Rating: &6<rating>\n&7Created: &6<created>"
+"ascendingItemName": "&f&lAufsteigend"
+"descendingItemName": "&f&lAbsteigend"
+"descendingItemDesc": "&r&7Zeigt die Ergebnisse\n&r&7in absteigender\n&r&7Reihenfolge an."
+"ascendingItemDesc": "&r&7Zeigt die Ergebnisse\n&r&7in aufsteigender\n&r&7Reihenfolge an."
+"forward": "&r&fWeiter"
+"back": "&r&fZurück"
+"forwardItemDesc": "&7Zeigt die nächste\n&7Seite an."
+"backItemDescbackItemDesc": "&7Zeigt die vorherige\n&7Seite an."
+"viewsItemName": "&r&fAufrufe"
+"viewsItemDesc": "&7Sortiert die Liste\n&7nach Aufrufen."
+"ratingItemName": "&r&fBewertung"
+"ratingItemDesc": "&7Sortiert die Liste\n&7nach Bewertung."
+"dateItemName": "&r&fDatum"
+"dateItemDesc": "&7Sortiert die Liste\n&7nach Erstellungsdatum."
+"filterItemName": "&r&fName"
+"filterItemDesc": "&7Filtert die Liste\n&7nach einem Namen."
