--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -90,6 +90,7 @@
 "MEDIUMMaps": "Mittlere Karteen"
 "HARDMaps": "Schwere Karten"
 "EXPERTMaps": "Experten Karten"
+"ALLMaps": "Alle Karten"
 "BEGINNERName": "Beginner"
 "EASYName": "Einfach"
 "MEDIUMName": "Mittel"
