--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -98,7 +98,7 @@
 "EXPERTName": "Experte"
 "ALLName": "Alle"
 "backToDiffSelection": "&r&7Zurück zur Auswahl\n&r&7des Schwierigkeitsgrades."
-"mapItemLore": "&7Visits: &6<visits>\n&7Rating: &6<rating>\n&7Created: &6<created>"
+"mapItemLore": "&7Besuche: &6<visits>\n&7Bewertung: &6<rating>\n&7Erstellt: &6<created>"
 "ascendingItemName": "&f&lAufsteigend"
 "descendingItemName": "&f&lAbsteigend"
 "descendingItemDesc": "&r&7Zeigt die Ergebnisse\n&r&7in absteigender\n&r&7Reihenfolge an."
