--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -83,8 +83,8 @@
 "parkourRenamedTo": "Der Parkour wurde in <name> benannt."
 "cannotRenameParkourThatIsDone": "Fertige Parkours können nicht umbenannt werden."
 "selectADifficulty": "Wähle einen Schwierigkeitsgrad"
-"clickToSelectThisDifficulty": "&7Click here to\n&7select this difficulty."
-"clickToSelectAllDifficulties": "&7Click here to\n&7select all difficulties."
+"clickToSelectThisDifficulty": "&7Klicke hier, um diesen\n&7Schwierigkeitsgrad auszuwählen."
+"clickToSelectAllDifficulties": "&7Klicke hier, um alle\n&7Schwierigkeitsgrade anzuzeigen."
 "BEGINNERMaps": "Beginner Karten"
 "EASYMaps": "Einfache Karten"
 "MEDIUMMaps": "Mittlere Karteen"
