--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -115,3 +115,4 @@
 "dateItemDesc": "&7Sortiert die Liste\n&7nach Erstellungsdatum."
 "filterItemName": "&r&fName"
 "filterItemDesc": "&7Filtert die Liste\n&7nach einem Namen."
+"selected": "Ausgewählt:"
