--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -116,3 +116,4 @@
 "filterItemName": "&r&fName"
 "filterItemDesc": "&7Filtert die Liste\n&7nach einem Namen."
 "selected": "Ausgewählt:"
+"newParkour": "Neuer Parkour"
