--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -117,3 +117,4 @@
 "filterItemDesc": "&7Filtert die Liste\n&7nach einem Namen."
 "selected": "Ausgewählt:"
 "newParkour": "Neuer Parkour"
+"mapItemLoreNoVisits": "&7Bewertung: &6<rating>\n&7Erstellt: &6<created>"
