--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -118,3 +118,5 @@
 "selected": "Ausgewählt:"
 "newParkour": "Neuer Parkour"
 "mapItemLoreNoVisits": "&7Bewertung: &6<rating>\n&7Erstellt: &6<created>"
+"newMapItemName": "Neue Karte erstellen"
+"newMapItemDesc": "Erstellt eine neue Karte."
