--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -7,8 +7,8 @@
 "checkpointblocks": "Checkpoint Blöcke"
 "clicktogetblock": "Klicke hier, um einen\n<block> zu erhalten."
 "optional": "Optional:"
-"checked": "[✓]"
-"unchecked": "[ ]"
+"checked": "☑"
+"unchecked": "☐"
 "parkourname": "Parkourname"
 "clicktosetname": "Klicke hier, um einen\nParkournamen zu setzen."
 "toplisthologramlocation": "Ort für Toplist Hologram"
