--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -120,3 +120,4 @@
 "mapItemLoreNoVisits": "&7Bewertung: &6<rating>\n&7Erstellt: &6<created>"
 "newMapItemName": "Neue Karte erstellen"
 "newMapItemDesc": "Erstellt eine neue Karte."
+"todoHeader": "Zu erledigen: &b(Anklickbar)"
