--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -121,3 +121,4 @@
 "newMapItemName": "Neue Karte erstellen"
 "newMapItemDesc": "Erstellt eine neue Karte."
 "todoHeader": "Zu erledigen: &b(Anklickbar)"
+"textClickable": "&bAnklickbarer Text&7\n&7Der Text in dieser\n&7Nachricht ist anklickbar."
