--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -1,9 +1,9 @@
 "startblock": "Start Block"
 "endblock": "Ende Block"
 "checkpointblock": "Checkpoint Block"
-"startblockdesc": "Markiert den Anfang eines\nParkours, laufe über\ndiesen Block, um einen\nParkour zu beginnen."
-"checkpointblockdesc": "Platziere Checkpoints um\nes den Spielern einfacher zu machen."
-"endblockdesc": "Markiert das Ende eines\nParkours, laufe über\ndiesen Block, um einen\nParkour abzuschließen."
+"startblockdesc": "&7Markiert den Anfang eines\n&7Parkours, laufe über\n&7diesen Block, um einen\n&7Parkour zu beginnen."
+"checkpointblockdesc": "&7Platziere Checkpoints um\n&7es den Spielern einfacher zu machen."
+"endblockdesc": "&7Markiert das Ende eines\n&7Parkours, laufe über\n&7diesen Block, um einen\n&7Parkour abzuschließen."
 "checkpointblocks": "Checkpoint Blöcke"
 "clicktogetblock": "Klicke hier, um einen\n<block> zu erhalten."
 "optional": "Optional:"
