--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -122,3 +122,5 @@
 "newMapItemDesc": "Erstellt eine neue Karte."
 "todoHeader": "Zu erledigen: &b(Anklickbar)"
 "textClickable": "&bAnklickbarer Text&7\n&7Der Text in dieser\n&7Nachricht ist anklickbar."
+"spawnlocation": "Parkour Spawn setzen"
+"setspawnlocation": "&7Klicke hier, um den Spawn\n&7des Parkours zu setzen."
