--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -127,3 +127,13 @@
 "SendRequestTo": "Anfrage an <player> senden"
 "thisPlayerIsLeading": "<leader> leitet die Gruppe von <member>."
 "clickHereToRequest": "Klicke hier, um eine Anfrage\nan <player> zu senden."
+"youCanNotInviteYourself": "Du kannst dich nicht selbst einladen."
+"youCanNotAddYourself": "Du kannst dich nicht selbst hinzufügen."
+"youInvitedPlayer": "Du hast <player> eingeladen."
+"youHaveBeenInvited": "Du wurdest von <player> eingeladen."
+"clickHereToAcceptInvite": "Klicke hier, um eine der\nParty von <player> beizutreten."
+"acceptInvite": "Einladung annehmen"
+"requestedInvite": "Anfrage an <player> gesendet."
+"playerWantsToJoin": "<player> möchte der Party beitreten."
+"invitePlayerButton": "<player> in die Party einladen"
+"clickHereToInvite": "Klicke hier, um <player>\nin deine Party einzuladen."
