--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -137,3 +137,11 @@
 "playerWantsToJoin": "<player> möchte der Party beitreten."
 "invitePlayerButton": "<player> in die Party einladen"
 "clickHereToInvite": "Klicke hier, um <player>\nin deine Party einzuladen."
+"youAreInThisPartyAlready": "Du bist schon in dieser Party."
+"youAreAlreadyInAParty": "Du bist schon in einer anderen Party."
+"switchPartyButton": "In die Party von <player> wechseln"
+"clickHereToSwitchParty": "Klicke hier, um in die\nParty von <player> zu wechseln."
+"playerJoinedTheParty": "<player> ist der Party beigetreten."
+"partyIsAtAnotherMap": "Die Party findet auf einer anderen Map statt."
+"toMapOfTheParty": "Zur Karte der Party teleportieren"
+"clickHereToTeleportToTheParty": "Klicke hier, um dich zur\nKarte der Party zu teleportieren."
