--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -145,3 +145,12 @@
 "partyIsAtAnotherMap": "Die Party findet auf einer anderen Map statt."
 "toMapOfTheParty": "Zur Karte der Party teleportieren"
 "clickHereToTeleportToTheParty": "Klicke hier, um dich zur\nKarte der Party zu teleportieren."
+"youCanNotKickYourself": "Du kannst dich nicht selbst kicken, verlasse dazu die Party."
+"youAreNotInAParty": "Du bist in keiner Party."
+"youHaveBeenKickedBy": "Du wurdest von <player> gekickt."
+"playerHasBeenKicked": "<player> wurde gekickt."
+"onlyPartlyLeaderCanDoThat": "Nur der Party Leader kann das."
+"playerLeftTheParty": "<player> hat die Party verlassen."
+"playerLeftTheGame": "<player> hat das Spiel verlassen."
+"partyHasDissolved": "Die Party hat sich aufgelöst."
+"playerIsNowLeadingParty": "<player> leitet jetzt die Party."
